--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ pubspec.lock
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
-
+.idea/
+.metadata
 # dotenv environment variables file
 .env*
 
