--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: dartbase
 description: A new Flutter project.
 version: 0.0.1
-author: luis<156711203@qq.com>
+homepage: https://github/any-call/dartbase
 
 environment:
-  sdk: '>=2.19.0-146.2.beta <3.0.0'
+  sdk: '>=3.2.0 <3.2.0'
   flutter: ">=1.17.0"
 
 dependencies:
