--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   dio: ^4.0.4
   #dart 类型 与 C 类型互转
   ffi: ^2.1.0
+  #文件选择包
+  file_selector: ^1.0.1
 
 dev_dependencies:
   flutter_test:
